<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Codsoft</groupId>
  <artifactId>Codsoft</artifactId>
  <version>0.0.1-SNAPSHOT</version>
   <properties>
        <!-- Set Java version to 17 -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
	  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
<dependencies>
    <!-- Apache POI - For Word and Excel -->
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>5.0.0</version>
    </dependency>
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>5.0.0</version>
    </dependency>
    
        
</dependencies>

  
 
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
		
	<plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-exports java.desktop/javax.swing=ALL-UNNAMED --add-exports java.desktop/java.awt=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
    <release>17</release>
    <compilerArgs>
        <arg>--add-opens</arg>
        <arg>java.base/java.io=org.apache.poi.poi</arg>
        <arg>--add-opens</arg>
        <arg>java.base/java.nio=org.apache.poi.poi</arg>
    </compilerArgs>
    
</configuration>

        
      </plugin>
      
    </plugins>
 
		
  </build>

</project>
